# Copyright 2018-2025 the Deno authors. MIT license.

[package]
name = "bench_io_uring"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "bench_io_uring"
path = "../bench_io_uring.rs"

[[bin]]
name = "test_io_uring"
path = "../test_io_uring.rs"

[dependencies]
tokio.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
tokio-uring = { workspace = true, optional = true }

[features]
default = []
io_uring = ["dep:tokio-uring"]
